; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/lguest/extr_hypercalls.c_write_timestamp.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/lguest/extr_hypercalls.c_write_timestamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lg_cpu = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }
%struct.timespec = type { i32 }

@.str = private unnamed_addr constant [18 x i8] c"Writing timestamp\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @write_timestamp(%struct.lg_cpu* %0) #0 {
  %2 = alloca %struct.lg_cpu*, align 8
  %3 = alloca %struct.timespec, align 4
  store %struct.lg_cpu* %0, %struct.lg_cpu** %2, align 8
  %4 = call i32 @ktime_get_real_ts(%struct.timespec* %3)
  %5 = load %struct.lg_cpu*, %struct.lg_cpu** %2, align 8
  %6 = getelementptr inbounds %struct.lg_cpu, %struct.lg_cpu* %5, i32 0, i32 0
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = call i64 @copy_to_user(i32* %10, %struct.timespec* %3, i32 4)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load %struct.lg_cpu*, %struct.lg_cpu** %2, align 8
  %15 = call i32 @kill_guest(%struct.lg_cpu* %14, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %13, %1
  ret void
}

declare dso_local i32 @ktime_get_real_ts(%struct.timespec*) #1

declare dso_local i64 @copy_to_user(i32*, %struct.timespec*, i32) #1

declare dso_local i32 @kill_guest(%struct.lg_cpu*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
